fix: buttons alignment

--- a/src/views/Rooms/Room.css
+++ b/src/views/Rooms/Room.css
@@ -8,9 +8,18 @@ video::-webkit-media-controls-timeline {
   left: 215px;
   display: none;
   width: 60vw;
-  margin-top: 1vh;
+  margin-top: 30vh;
   max-width: 85vw;
   max-height: 60vh;
+}
+
+#contextOptions {
+  position: fixed;
+  left: 500px;
+  bottom: 30vh;
+  border-radius: 50px;
+  transform: scale(0.8);
+  background-color: rgba(255, 255, 255, 0.637);
 }
 
 #videos {
@@ -34,6 +43,10 @@ video::-webkit-media-controls-timeline {
     left: 10px;
     width: 95vw;
     max-width: 100vw;
+  }
+  #contextOptions {
+    left: 20px;
+    transform: scale(0.6);
   }
 }
 
